--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,44 @@
 /* Other rules */
+.container {
+  background-color: teal;
+  margin: 0 auto;
+  width: 100%;
+  height: 1356px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+span {
+  font-size: 300px;
+  color: white;
+}
+p {
+  font-size: 300px;
+  color: teal;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+}
+button {
+  height: 300px;
+  width: 300px;
+  border-radius: 30%;
+  background-color: teal;
+  color: white;
+  border: none;
+  outline: inherit;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.reset {
+  margin-top: 60px;
+  font-size: 30px;
+  background-color: rgb(13, 74, 74);
+  height: 45px;
+  width: 200px;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0 auto;
+}
