--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,13 @@ button {
   padding: 5px;
   margin: 0 auto;
 }
+.addCounter {
+  margin-top: 60px;
+  font-size: 30px;
+  background-color: rgb(13, 74, 74);
+  height: 45px;
+  width: 350px;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0 auto;
+}
